--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".WeatherActivity" />
         <activity android:name=".CinemaActivity" />
-        <activity android:name=".EagleAndTailsActivity"></activity>
+        <activity android:name=".EagleAndTailsActivity" />
+        <activity android:name=".EasyGameActivity" />
+        <activity android:name=".LotoActivity"></activity>
     </application>
 
 </manifest>
